--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 canvas[resize] {
   width: 100%;
   height: 100%;
 }
-
-#theJSON { width: 100%; height: 100px }
-#myCanvas { background: url("kids.png") no-repeat}
