--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 40px;
 }
 canvas[resize] {
   width: 100%;
