--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 40px;
+  margin-bottom: 20px;
 }
 canvas[resize] {
   width: 100%;
